Fixed some style

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -65,7 +65,7 @@
             <!-- <h5 class="card-title"> My Cart</h5> -->
         </div>
         <div class="center">
-            <img src="./assets/images/cart.jpg" alt="">
+            <!-- <img src="./assets/images/cart.jpg" alt=""> -->
             <h4>Your Cart is empty...</h4>
             <h5>Add item to it now!</h5>
             <button routerLink="/products" class="btn btn-primary">Shop Now</button>
