--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -3,10 +3,9 @@
         <h3>Love to Hear From You</h3>
         <div class="row">
             <div class="col-md-9">
-                <p class="contact-message">"Feel free to reach out to us with any inquiries, suggestions, or feedback you might have.
+                <p class="contact-message">Feel free to reach out to us with any inquiries, suggestions, or feedback.
                     Our team is dedicated to assisting you and ensuring a smooth experience. Your questions matter to
-                    us,
-                    and we're here to provide you with the information and support you need."</p>
+                    us, and we're here to provide you with the information and support you need.</p>
                 <div class="map-container">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d405691.5814439776!2d-122.32199106332915!3d37.40247131407771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb68ad0cfc739%3A0x7eb356b66bd4b50e!2sSilicon%20Valley%2C%20CA%2C%20USA!5e0!3m2!1sen!2sin!4v1567518063798!5m2!1sen!2sin"
@@ -14,18 +13,18 @@
                 </div>
             </div>
             <div class="col-md-3 contact-details">
-                <h3>Postal Address</h3>
+                <h4>Postal Address</h4>
                 <address>
-                    Address Line 1<br>
-                    Address Line 2<br>
-                    City, State<br>
-                    Country<br>
+                    123 Main Street, Sunnyvale<br>
+                    Suite 200<br>
+                    Sunnyvale, CA<br>
+                    United States<br>
                     Pin code- 560037
                 </address>
-                <h3>Email</h3>
-                <p><strong>Office:</strong> office@gmail.com</p>
-                <p><strong>Personal:</strong> personal@gmail.com</p>
-                <h3>Phone</h3>
+                <h4>Email</h4>
+                <p><strong>Office:</strong> acmecorporation.office@gmail.com</p>
+                <p><strong>Personal:</strong> janedoe.personal@gmail.com</p>
+                <h4>Phone</h4>
                 <p><strong>Office:</strong> +91-1234567890</p>
                 <p><strong>Work:</strong> +91-1234567891</p>
             </div>
