--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,14 @@
 @import "~primeicons/primeicons.css";
 @import "primeng/resources/themes/saga-blue/theme.css";
 @import "primeng/resources/primeng.min.css";
+
+/* styles.css or your main stylesheet */
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #042036; /* Set the entire background color */
+  color: #fff; /* Text color */
+}
+
+/* Other global styles as needed */
