Update homepage style

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,11 @@
-
-<div class="background-image"></div>
+<div class="background-image">
+    <div class="content">
+      <div class="flex-container">
+        <div class="center">
+          <p>Discover the latest trends in men's and women's clothing, electronics, and jewelry!</p>
+          <p>Shop from a wide range of products and enjoy exclusive deals and discounts.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
