--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,43 @@
 .background-image {
-  /* Set the background image URL */
   background-image: url("https://img.freepik.com/premium-photo/cloud-technology-icon-smartphone_117856-2693.jpg");
-  background-size: cover; /* Ensures the background image covers the entire element */
-  width: 100%; /* Full width */
-  height: 100vh; /* Full height by default */
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 
   /* Adjustments for mobile devices */
   @media screen and (max-width: 768px) {
-    height: 60vh; /* Adjust height for mobile devices as needed */
+    height: 60vh;
   }
+}
+
+.content {
+  text-align: center;
+  padding: 100px;
+  color: #fff;
+}
+
+.content h3 {
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+
+.content p {
+  font-size: 1.2em;
+  font-style: italic;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.center {
+  padding: 20px;
+  border-radius: 8px;
+  width: 800px;
+  margin-top: 30px;
+  text-align: center;
 }
