--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -6,6 +6,7 @@
   margin: 25px;
   padding: 25px;
   margin-top: 120px;
+  border: 1px solid rgb(230, 235, 203);
  
 }
 
@@ -69,11 +70,6 @@ h6 {
   border: 1px solid black;
 }
 
-.container {
-  background-color: #042036;
-  /* Other styles for the container */
-}
-
 .html {
-  background-color: #042036;
+  background-color: #04020d;
 }
