--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #042036;
+  background-color: #04020d;
   color: #fff;
   font-family: Arial, sans-serif;
 }
@@ -14,7 +14,7 @@
   padding: 50px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #042036;
+  background-color: #04020d;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -42,7 +42,7 @@ iframe {
   border-left: 1px solid #ccc;
   padding-left: 30px;
   color: white;
-  background-color: #042036;
+  background-color: #04020d;
 }
 
 .contact-details h4 {
