--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,9 +1,51 @@
-<!-- 
-<p-carousel [value]="images" styleClass="custom-carousel">
+<div class="about-us">
+  <div class="content">
+    <div class="boxes-container">
+      <div class="box">
+        <span class="icon"><i class="pi pi-angle-right"></i></span>
+        <p>Wide Product Selection</p>
+      </div>
+      <div class="box">
+        <span class="icon"><i class="pi pi-angle-right"></i></span>
+        <p>Special Deals & Discounts</p>
+      </div>
+      <div class="box">
+        <span class="icon"><i class="pi pi-angle-right"></i></span>
+        <p>Responsive Support</p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+  <p-carousel [value]="images" styleClass="custom-carousel">
     <ng-template let-image pTemplate="item">
-      <img [src]="image.source" [alt]="image.alt" class="carousel-image" />
+      <div class="carousel-item">
+        <img [src]="image.source" [alt]="image.alt" class="carousel-image" />
+        <div class="overlay-text">
+          {{ image.overlayText }}
+        </div>
+      </div>
     </ng-template>
   </p-carousel>
-   -->
 
-   <div class="background-image"></div>
+
+  <div class="content">
+    <div class="boxes-container">
+      <div class="box">
+        <span class="icon"><i class="pi pi-angle-right"></i></span>
+        <p>Seamless Transactions</p>
+      </div>
+      <div class="box">
+        <span class="icon"><i class="pi pi-angle-right"></i></span>
+        <p>Exclusive Offers & Promotions</p>
+      </div>
+      <div class="box">
+        <span class="icon"><i class="pi pi-angle-right"></i></span>
+        <p>Fast & Reliable Delivery</p>
+      </div>
+    </div>
+  </div>
+</div>
