--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -8,7 +8,7 @@
 }
 
 .header {
-  background-color: #042036;
+  background-color: #04020d;
   padding: 20px 0px 10px 0px;
   border-top: 4px solid grey;
   position: fixed;
