--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .background-image {
-  background-image: url("https://img.freepik.com/premium-photo/cloud-technology-icon-smartphone_117856-2693.jpg");
+  background-image: url("https://www.studio1-dam.com/fileadmin/user_upload/digital_asset_management_studio1.jpg");
   background-size: cover;
   width: 100%;
   height: 100vh;
