--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <div class="user-auth">
     <div class="common-form contact-us">
-        <h3>Love to Hear From You</h3>
+        <!-- <h3>Love to Hear From You</h3> -->
         <div class="row">
             <div class="col-md-9">
                 <p class="contact-message">Feel free to reach out to us with any inquiries, suggestions, or feedback.
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="col-md-3 contact-details">
-                <h4>Postal Address</h4>
+                <h5>Postal Address</h5>
                 <address>
                     123 Main Street, Sunnyvale<br>
                     Suite 200<br>
@@ -21,10 +21,10 @@
                     United States<br>
                     Pin code- 560037
                 </address>
-                <h4>Email</h4>
+                <h5>Email</h5>
                 <p><strong>Office:</strong> acmecorporation.office@gmail.com</p>
                 <p><strong>Personal:</strong> janedoe.personal@gmail.com</p>
-                <h4>Phone</h4>
+                <h5>Phone</h5>
                 <p><strong>Office:</strong> +91-1234567890</p>
                 <p><strong>Work:</strong> +91-1234567891</p>
             </div>
