--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -70,6 +70,23 @@ h6 {
   border: 1px solid black;
 }
 
+.cart-product{
+  background-color: #04020d;
+}
+
 .html {
   background-color: #04020d;
+}
+
+.table td, .table th {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+  color: white;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: rgb(68, 65, 65);
+  border-color: #04020d;
 }
