Fixed some style

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -23,7 +23,7 @@
                             <td style="width: 25%;">
                                 <h6>{{item.title}}</h6>
                             </td>
-                            <td><img style="width: 100px; height:100px; margin-top: 20px;" src="{{item.image}}" alt="">
+                            <td><img style="width: 100px; height:100px;" src="{{item.image}}" alt="">
                             </td>
                             <td style="width: 35%;">{{ item.description.split(' ').slice(0, 15).join(' ') }}...</td>
 
