--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .background-image {
-  background-image: url("https://www.studio1-dam.com/fileadmin/user_upload/digital_asset_management_studio1.jpg");
+  background-image: url("https://img.freepik.com/premium-photo/digital-marketing-website-ad-email-social-network-seo-video-mobile-app-business-technology-development-e-commerce-online-shopping-concept-with-icons-pay-per-click-ppc-dashboard_27634-676.jpg");
   background-size: cover;
   width: 100%;
   height: 100vh;
