Update some style

--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -1,5 +1,5 @@
 .card {
-  background-image: url("https://img.freepik.com/free-photo/arrangement-black-friday-shopping-carts-with-copy-space_23-2148667047.jpg?size=626&ext=jpg&ga=GA1.1.1222169770.1702512000&semt=ais");
+  background-image: url("https://www.shutterstock.com/image-vector/abstract-metallic-blue-black-frame-260nw-457398142.jpg");
   background-size: cover; /* Ensure the background image covers the entire card */
   background-position: center;
   height: 60vh;
