--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,16 +1,16 @@
 <div class="user-auth">
-<div class="card-top container-fluid">
-  <div class="container d-flex">
-    <div>
-      <h6>Filter by Category:</h6>
-      <select class="form-control" (change)="onCategoryChange($event)">
-        <option value="">All</option>
-        <option value="{{option}}" *ngFor="let option of categories">{{option}}</option>
-      </select>
+  <div class="card-top container-fluid">
+    <div class="container d-flex">
+      <div>
+        <h6>FILTER BY CATEGORY:</h6>
+        <select class="form-control" (change)="onCategoryChange($event)">
+          <option value="">All</option>
+          <option value="{{option}}" *ngFor="let option of categories">{{option}}</option>
+        </select>
 
-    </div>
+      </div>
 
-    <!-- <div class="item">
+      <!-- <div class="item">
       <a (click)="filterrCategory($event)">
         <h5> All items &nbsp;<i class="pi pi-chevron-down"></i></h5>
       </a>
@@ -30,50 +30,50 @@
         <h5> Electronics &nbsp;<i class="pi pi-chevron-down"></i></h5>
       </a>
     </div> -->
+    </div>
   </div>
-</div>
 
 
-<div class="container" *ngIf="filteredProducts$ | async as products">
-  <p-dataView #dv [value]="products" [paginator]="true" [rows]="1" [sortField]="sortField" [sortOrder]="sortOrder"
-    layout="grid">
-    <ng-template pTemplate="header">
-      <div class="flex flex-column md:flex-row md:justify-content-between">
-        <!-- <span class="instruction">* Sort by price first, then select category!</span> -->
-        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="sort by price..."
-          (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
-      </div>
-      <p-dropdown [options]="categorysortOptions" [(ngModel)]="sortKey" placeholder="sort by category..."
-        (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
-    </ng-template>
-
-    <ng-template let-product pTemplate="gridItem">
-      <div class="container">
-
-        <div class="row">
-
-          <ng-container *ngFor="let item of products | filter:searchKey:'title'">
-            <div class="card col-md-3">
-
-              <div class="product-grid-item-content">
-                <div>
-                  <i class="pi pi-tag product-category-icon"></i>
-                  <span class="product-category">{{ item.category }}</span>
-                </div>
-                <img src="{{item.image}}" alt="">
-              </div>
-              <h6> <strong> {{item.title}} </strong> </h6>
-              <p>
-                {{item.description}}
-              </p>
-              <p><strong>Price:</strong> ${{item.price}}</p>
-              <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
-            </div>
-
-          </ng-container>
+  <div class="container" *ngIf="filteredProducts$ | async as products">
+    <p-dataView #dv [value]="products" [paginator]="true" [rows]="1" [sortField]="sortField" [sortOrder]="sortOrder"
+      layout="grid">
+      <ng-template pTemplate="header">
+        <div class="flex flex-column md:flex-row md:justify-content-between">
+          <!-- <span class="instruction">* Sort by price first, then select category!</span> -->
+          <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="sort by price..."
+            (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
         </div>
-      </div>
-    </ng-template>
-  </p-dataView>
-</div>
+        <p-dropdown [options]="categorysortOptions" [(ngModel)]="sortKey" placeholder="sort by category..."
+          (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
+      </ng-template>
+
+      <ng-template let-product pTemplate="gridItem">
+        <div class="container">
+
+          <div class="row">
+
+            <ng-container *ngFor="let item of products | filter:searchKey:'title'">
+              <div class="card col-md-3">
+
+                <div class="product-grid-item-content">
+                  <div>
+                    <i class="pi pi-tag product-category-icon"></i>
+                    <span class="product-category">{{ item.category }}</span>
+                  </div>
+                  <img src="{{item.image}}" alt="">
+                </div>
+                <h6> <strong> {{item.title}} </strong> </h6>
+                <p>
+                  {{item.description}}
+                </p>
+                <p><strong>Price:</strong> ${{item.price}}</p>
+                <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
+              </div>
+
+            </ng-container>
+          </div>
+        </div>
+      </ng-template>
+    </p-dataView>
+  </div>
 </div>
