--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -32,8 +32,9 @@
                         <a routerLink="home">HOME</a>
                         <a routerLink="about-us">ABOUT US</a>
                         <a routerLink="contact-us">CONTACT US</a>
+                        <a routerLink="orders" style="cursor: pointer;">ORDERS</a>
                         <a>{{userName | uppercase}}</a>
-                        <a (click)="userLogout()" style="cursor: pointer;">LOGOUT</a>
+                        <a (click)="userLogout()" style="cursor: pointer;"> <i class="pi pi-sign-out"></i></a>
                         <button class="nofocus" routerLink="cart">
                             <i class="pi pi-shopping-cart"></i>
                             <div class="badge bg-danger">{{cartLength}}</div>
