--- a/src/app/user-auth/user-auth.component.css
+++ b/src/app/user-auth/user-auth.component.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   padding-top: 200px;
-  /* align-items: center; */
+  background-color: #04020d;
   height: 80vh;
   background-size: cover;
   width: 100%;
