--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #04020d; /* Set the entire background color */
+  background-color: rgb(229, 229, 231); /* Set the entire background color */
   color: #fff; /* Text color */
 }
 
