--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -7,7 +7,6 @@
   padding: 25px;
   margin-top: 120px;
   border: 1px solid rgb(230, 235, 203);
- 
 }
 
 .center img {
@@ -70,15 +69,12 @@ h6 {
   border: 1px solid black;
 }
 
-.cart-product{
+.cart-product {
   background-color: #04020d;
 }
 
-.html {
-  background-color: #04020d;
-}
-
-.table td, .table th {
+.table td,
+.table th {
   padding: 0.75rem;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
