--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -9,6 +9,7 @@
 }
 
 .order {
+  font-size: 18px;
   font-style: italic;
   font-weight: bold;
   color: #04020d;
@@ -22,7 +23,7 @@ h6 {
 .left {
   position: absolute;
   top: 45%;
-  left: 34%;
+  left: 32%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
