--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -39,12 +39,12 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: rgb(226, 228, 208);
+  color: #04020d;
   padding: 10px;
   max-width: 500px;
   font-style: italic;
   text-align: center;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 /* Media query for tablets */
@@ -86,6 +86,7 @@
 
 .icon {
   margin-right: 10px;
+  margin-top: 20px;
 }
 
 .icon i {
@@ -93,14 +94,14 @@
 }
 
 .box {
-  background-image: url("https://static.vecteezy.com/system/resources/thumbnails/007/169/428/small/modern-dark-blue-background-with-golden-lines-element-vector.jpg");
+  background-image: url("https://i.pinimg.com/564x/c1/97/7d/c1977de3ed571607a33c3c3e59691e6b.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
-  padding: 20px;
+  padding: 30px;
   border-radius: 8px;
   margin: 10px;
-  color: white;
+  color: #04020d;
   flex: 1 1 300px;
   max-width: 400px;
   height: 150px;
@@ -109,11 +110,11 @@
 .box p {
   font-size: 1em;
   line-height: 1.6em;
-  color: white;
+  color: #04020d;
   font-style: italic;
   font-weight: bold;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 30px;
 }
 
 /* Media query for responsiveness */
@@ -129,6 +130,4 @@
   .box:hover .hover-image {
     display: block;
   }
-
-
 }
