--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -1,5 +1,5 @@
 .card {
-  background-image: url("https://www.shutterstock.com/image-vector/abstract-metallic-blue-black-frame-260nw-457398142.jpg");
+  background-image: url("https://cdn.maqe.com/content/uploads/2021/07/22072853/Optimized-Shopping_cart_abandonment_rate-1024x683.jpg");
   background-size: cover; /* Ensure the background image covers the entire card */
   background-position: center;
   height: 60vh;
@@ -19,17 +19,17 @@
   margin: 20px 0px;
 }
 
-h4 {
+.cart {
+  font-size: 18px;
+  font-style: italic;
   font-weight: bold;
-  font-size: 1.5rem;
-  color: white;
-  margin-bottom: 10px;
+  color: #04020d;
 }
 
 h5 {
   font-weight: 500;
   font-size: 1.2rem;
-  color: white;
+  color: black;
   margin-bottom: 8px;
 }
 
@@ -40,7 +40,7 @@ h6 {
 .center {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 35%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -81,8 +81,17 @@ h6 {
   color: white;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: rgb(68, 65, 65);
-  border-color: #04020d;
+.cart-button {
+  color: black;
+  width: 130px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+  border: 1px solid #04020d;
+}
+
+.cart-button:hover {
+  background-color: #d5d5e4;
 }
